Remove native load tip
It is already explained by the warning message, and is adapted when the user uses modules